Added ADMIN validation and connected Admin page